assets/css/style.css
body {
    margin-bottom: 30px;
}

.header {
    background-color: rgb(127, 149, 189);
    box-shadow: 0 4px 2px -2px rgb(234, 234, 234);
    text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.15);
    height: 50px;
    padding: 10px;

    color: white;

    margin-bottom: 30px;
}

.menu-link {
    text-decoration: none !important;
    color: white;
}

.menu-link.selected {
    font-weight: bold;
}

.brand {
    text-decoration: none !important;
    color: white;
    font-weight: 100;
    font-size: 20px;

    display: inline-block;
}

.dot:after {
    margin-left: 8px;
    margin-right: 8px;

    content: "•";
    display: inline-block;
}

.input-field {
    margin-top: 10px;
    margin-bottom: 10px;
}

#logout-form {
    display: inline-block;
}

.progress-bar {
    border-style: solid;
    border-width: 1px;
    border-radius: 2px;
    width: 300px;
    height: 7px;
}

.progress-bar-fill {
    height: 5px;
    background-color: rgb(127, 149, 189);
}

.btn-danger {
  color: #fff;
  background-color: #b33630;
  background-image: linear-gradient(#dc5f59, #b33630);
  border-color: #cd504a;
}

.img-well {
    border-style: solid;
    border-width: 1px;
    border-color: #ECECEC;
    box-shadow: inset 0 0 1em #ECECEC;
    width: 250px;
    height: 180px;
    display: inline-block;
    overflow: scroll;
    padding: 8px;

    margin-right: 7px;
    margin-bottom: 7px;
}

.media-item {
    border-style: solid;
    border-width: 1px;
    border-color: #ECECEC;

    width: 250px;
    height: 200px;
    display: inline-block;
    margin-right: 7px;
    margin-bottom: 12px;  
    border-radius: 4px; 
}

.media-image {
    width: 100%;
    height: 160px;
    border-bottom: 1px solid #ECECEC;
    box-shadow: inset 0 0 1em #ECECEC;
    padding: 8px;
}

.media-desc {
    padding: 6px;
    color: #5C5C5C;
}

.dropdown-menu {
    position: absolute;
    margin-left: 86px;
    margin-top: -28px;
    width: 150px;
    z-index: 999;
    display: none;
}

.more-info-btn:focus {
    box-shadow: none;
}

.media-name {
    line-height: 28px;
    max-width: 200px !important;
    font-weight: bold;
}

.media-corner {
    width: 26px;
    height: 26px;
    background-color: white;
    position: absolute;
    border-bottom-right-radius: 9px;
    border-top-left-radius: 4px;

    border-bottom: 1px solid #ECECEC;
    border-right: 1px solid #ECECEC;

    padding-top: 3px;
    padding-left: 6px;
}

.upload-title {
    font-weight: 100;
    text-align: center;
    margin-top: -10px;
}

.upload-img-main {
    box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.30);
}

